--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -75,7 +75,7 @@
     summary: "Stará se o to, aby se materiály Fakt o klimatu dostaly k novinářům, učitelům, politikům a dalším lidem, pro které mohou být užitečné v jejich práci. Kromě toho se zabývá tématem vlivu změny klimatu na extrémy počasí."
     img: "milan-vitek.jpg"
     email: "milan.vitek@faktaoklimatu.cz"
-    hone: "+420 731 724 074"
+    phone: "+420 731 724 074"
     linkedin: "https://www.linkedin.com/in/milan-v%C3%ADtek-151b456b/"
     twitter: "https://twitter.com/vitekmilan"
 
@@ -84,6 +84,7 @@
     position: "Analytička"
     summary: "Přispívá především k otázkám spojeným s klimatickou politikou Číny a EU. Studuje obor zaměřený na evropskou politiku se specializací na životní prostředí a energetiku v Paříži."
     img: "eliska-soperova.jpg"
+    linkedin: "https://www.linkedin.com/in/eli%C5%A1ka-soperov%C3%A1/"
 
   - id: "martin-ukrop"
     name: "Martin Ukrop"
@@ -182,7 +183,7 @@
 
   - id: "hana-tesak-vrtala"
     name: "Hana Tesák Vrtala"
-    summary: "Věnuje se komunikaci vědy a pedagogickému vzdělávání budoucích učitelů přírodních věd. Ve Faktech o klimatu spoluvytvářela podcast [2050](https://2050podcast.cz/)."
+    summary: "Věnuje se komunikaci vědy a pedagogickému vzdělávání budoucích vyučujících přírodních věd. Ve Faktech o klimatu spoluvytvářela podcast [2050](https://2050podcast.cz/)."
     linkedin: "https://www.linkedin.com/in/hana-vrtalová/"
     twitter: "https://twitter.com/HVrtalova"
 
