--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,9 @@
     - title: <i class="fas fa-fw fa-headphones mr-1"></i> Podcast 2050
       link: https://2050podcast.cz/
 
+    - title: <i class="fas fa-graduation-cap fa- mr-1"></i> Online kurz Dekarbonizujeme Česko
+      link: https://dekarbonizujemecesko.cz/
+
     - title: <i class="fas fa-fw fa-book mr-1"></i> Naše publikace
       link: /publikace
 
