Odkaz na online kurz z homepage

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
     - title: <i class="fas fa-fw fa-headphones mr-1"></i> Podcast 2050
       link: https://2050podcast.cz/
 
-    - title: <i class="fas fa-graduation-cap fa- mr-1"></i> Online kurz Dekarbonizujeme Česko
+    - title: <i class="fas fa-graduation-cap fa- mr-1"></i> Online kurz dekarbonizace
       link: https://dekarbonizujemecesko.cz/
 
     - title: <i class="fas fa-fw fa-book mr-1"></i> Naše publikace
