--- a/_config.local.yml
+++ b/_config.local.yml
@@ -82,5 +82,4 @@ kramdown:
 
 # Place language-specific JS files here such as a script for running a survey form.
 # See https://github.com/faktaoklimatu/web-cz/pull/1394 for a survey form implementation.
-local-scripts:
-- /assets-local/js/popup-kurz.js
+local-scripts: []
